--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -289,6 +289,13 @@
   }
 }
 
+@media only screen and (max-width: 767px) {
+  .career-section {
+    padding: 30px 0;
+    margin-bottom: 30px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .career-section h2 {
     font-size: 44px;
