--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -372,10 +372,13 @@
 @media only screen and (max-width: 900px) {
   .whatIDO {
     flex-direction: column;
+    min-height: auto;
+    margin: 30px auto;
+    padding: 30px 0;
   }
 
   .what-box h2 {
-    margin: 50px 0;
+    margin: 20px 0;
     font-size: 55px;
     line-height: 53px;
   }
@@ -385,7 +388,7 @@
   }
 
   .what-box:last-child {
-    height: 500px;
+    height: 450px;
   }
 
   .what-box {
